update spring boot, orika mapper and gradle wrapper, use junit5 for backend tests, upgrade postgres container, use docker volume instead of file system mount