@@ -5,28 +5,25 @@ import com.coyoapp.tinytask.dto.TaskRequest;
 import com.coyoapp.tinytask.dto.TaskResponse;
 import com.coyoapp.tinytask.exception.TaskNotFoundException;
 import com.coyoapp.tinytask.repository.TaskRepository;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import ma.glasnost.orika.MapperFacade;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
-import org.mockito.quality.Strictness;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.ThrowableAssert.catchThrowable;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-public class DefaultTaskServiceTest {
+@ExtendWith(MockitoExtension.class)
+class DefaultTaskServiceTest {
 
-  @Rule
-  public MockitoRule mockitoRule = MockitoJUnit.rule().strictness(Strictness.STRICT_STUBS);
 
   @Mock
   private TaskRepository taskRepository;
@@ -38,7 +35,7 @@ public class DefaultTaskServiceTest {
   private DefaultTaskService objectUnderTest;
 
   @Test
-  public void shouldCreateTask() {
+  void shouldCreateTask() {
     // given
     TaskRequest taskRequest = mock(TaskRequest.class);
     Task task = mock(Task.class);
@@ -56,11 +53,11 @@ public class DefaultTaskServiceTest {
   }
 
   @Test
-  public void shouldGetTasks() {
+  void shouldGetTasks() {
     // given
     Task task = mock(Task.class);
     TaskResponse taskResponse = mock(TaskResponse.class);
-    when(taskRepository.findAll()).thenReturn(Arrays.asList(task));
+    when(taskRepository.findAll()).thenReturn(List.of(task));
     when(mapperFacade.map(task, TaskResponse.class)).thenReturn(taskResponse);
 
     // when
@@ -71,7 +68,7 @@ public class DefaultTaskServiceTest {
   }
 
   @Test
-  public void shouldDeleteTask() {
+  void shouldDeleteTask() {
     // given
     String id = "task-id";
     Task task = mock(Task.class);
@@ -84,16 +81,16 @@ public class DefaultTaskServiceTest {
     verify(taskRepository).delete(task);
   }
 
-  @Test(expected = TaskNotFoundException.class)
-  public void shouldNotDeleteTask() {
+  @Test
+  void shouldNotDeleteTask() {
     // given
     String id = "task-id";
     when(taskRepository.findById(id)).thenReturn(Optional.empty());
 
     // when
-    objectUnderTest.deleteTask(id);
+    Throwable thrown = catchThrowable(() -> objectUnderTest.deleteTask(id));
 
     // then
-    // -- see exception of test annotation
+    assertThat(thrown).isInstanceOf(TaskNotFoundException.class);
   }
 }
